--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,48 @@
   --ifm-color-primary-lightest: #2c3557;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --brand: #61dafb;
+  --dark: #282c34;
+  --deepdark: #20232a;
+  --light: #373940;
+  --text: #1a1a1a;
+  --subtle: #767676;
+  --divider: #ececec;
+  --tintColor: #f7f7f7;
+  --rn-note-background: rgba(255, 229, 100, 0.25);
+  --ifm-font-family-base: "Optimistic Display", system-ui, -apple-system,
+    sans-serif;
+  --ifm-font-size-base: 17px;
+  --ifm-spacing-horizontal: 16px;
+  --ifm-navbar-item-padding-horizontal: 18px;
+  --ifm-menu-link-padding-horizontal: 0;
+  --ifm-toc-padding-vertical: 6px;
+  --ifm-toc-link-color: var(--ifm-color-emphasis-700);
+  --ifm-code-border-radius: 3px;
+  --ifm-blockquote-color: var(--ifm-font-color-base);
+  --ifm-blockquote-font-size: 16px;
+  --ifm-table-head-color: var(--subtle);
+  --ifm-link-hover-decoration: none;
+  /* --ifm-navbar-background-color: var(--deepdark); */
+  --ifm-transition-fast: 0;
+  --ifm-transition-slow: 0;
+  --ifm-pre-line-height: 1.5;
+  --ifm-tabs-padding-vertical: 6px;
+  --ifm-menu-link-padding-horizontal: 0.75rem;
+  --ifm-menu-link-padding-vertical: 0.375rem;
+  --ifm-color-warning: #ffe564;
+  --ifm-alert-border-width: 0;
+  --ifm-alert-border-radius: 0;
+  --ifm-alert-color: var(--ifm-font-color-base);
+  /* --ifm-pagination-nav-color-hover: var(--ifm-color-emphasis-300); */
+  --ifm-table-border-width: 0.005rem;
+  /* --ifm-navbar-sidebar-width: 100%; */
+  --ifm-hr-border-color: var(--docusaurus-collapse-button-bg-hover);
+
+  @media (min-width: 340px) {
+    --ifm-navbar-sidebar-width: 340px;
+  }
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -45,4 +87,461 @@
 .markdown a:active {
   color: #bb1122;
   text-decoration: underline;
+}
+
+/* Home page */
+
+.homepage div[class*="codeBlockContainer"] {
+    margin-bottom: 0;
+    overflow: visible;
+}
+
+.homepage div[class*="codeBlockContainer"] .prism-code {
+    font-size: 90%;
+}
+
+/* ActionButton */
+
+.ActionButton {
+  padding: 0.75rem 1.5rem;
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 400;
+  text-decoration: none !important;
+  border-bottom: none;
+  transition: all 0.2s ease-out;
+  max-width: 50%;
+}
+
+.ActionButton.primary {
+  color: var(--dark);
+  background-color: var(--brand);
+}
+
+.ActionButton.primary:hover {
+  color: black;
+  background-color: white;
+}
+
+.ActionButton.secondary {
+  background: none;
+  color: var(--brand);
+}
+
+.ActionButton.secondary::after {
+  content: "›";
+  font-size: 24px;
+  margin-left: 5px;
+}
+
+.ActionButton.secondary:hover {
+  color: white;
+}
+
+@media only screen and (max-width: 480px) {
+  .ActionButton {
+    max-width: 100%;
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+  }
+}
+
+/* Header Hero */
+
+.HeaderHero {
+  padding-top: 20px;
+}
+
+.HeaderHero .TwoColumns .column {
+  max-width: initial;
+}
+
+.HeaderHero .socialLinks {
+  display: flex;
+  justify-content: flex-end;
+  max-width: 1200px;
+  margin: -10px auto 0;
+}
+
+.HeaderHero .socialLinks .twitter-follow-button,
+.HeaderHero .socialLinks .github-button {
+  margin-right: 1rem;
+}
+
+.HeaderHero .TwoColumns {
+  align-items: center;
+}
+
+.HeaderHero .title {
+  font-size: 84px;
+  color: var(--tintColor);
+  line-height: 1;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+
+.HeaderHero .tagline {
+  font-size: 36px;
+  line-height: 1.3;
+  color: white;
+  font-weight: 500;
+}
+
+.HeaderHero .buttons {
+  margin-top: 40px;
+}
+
+.HeaderHero .image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 961px) {
+  .HeaderHero .TwoColumns {
+    grid-template-columns: 3fr 1fr;
+  }
+
+  .HeaderHero .TwoColumns .column.left {
+    padding-right: 0;
+  }
+
+  .HeaderHero .TwoColumns .column.right {
+    padding-left: 0;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 960px) {
+  .HeaderHero .column.first {
+    display: flex;
+    justify-content: center;
+  }
+  .HeaderHero .column.last {
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .HeaderHero .title {
+    font-size: 60px;
+  }
+
+  .HeaderHero .tagline {
+    font-size: 30px;
+  }
+
+  .HeaderHero .socialLinks {
+    margin-top: -2rem;
+  }
+}
+
+/* Heading */
+
+.Heading {
+  font-size: 25px;
+  color: var(--ifm-font-color-base);
+  line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+
+/* Section */
+
+.Section {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  overflow-x: hidden;
+}
+
+.Section + .Section {
+  border-top: 1px solid var(--ifm-table-border-color);
+}
+
+.Section.tint {
+  background-color: var(--ifm-menu-color-background-active);
+}
+
+.Section.dark {
+  background-color: var(--dark);
+}
+
+/* Two columns */
+
+.TwoColumns {
+  display: grid;
+}
+
+.TwoColumns .column {
+  width: 100%;
+}
+
+.TwoColumns .column.first {
+  grid-area: first;
+}
+
+.TwoColumns .column.last {
+  grid-area: last;
+}
+
+@media only screen and (min-width: 961px) {
+  .TwoColumns {
+    max-width: 900px;
+    margin: 0 auto;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "first last";
+  }
+
+  .TwoColumns.reverse {
+    grid-template-areas: "last first";
+  }
+
+  .TwoColumns .column {
+    max-width: 450px;
+  }
+
+  .TwoColumns .column.left {
+    padding-right: 50px;
+  }
+
+  .TwoColumns .column.right {
+    padding-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .TwoColumns,
+  .TwoColumns.reverse {
+    grid-template-columns: 1fr;
+    grid-template-areas: "first" "last";
+  }
+
+  .TwoColumns .column {
+    padding: 0 4rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .TwoColumns .column {
+    padding: 0 1.25rem;
+  }
+}
+
+/* Cross Platform */
+
+.CrossPlatform {
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 960px) {
+  .CrossPlatform .column.last {
+    max-height: 300px;
+  }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 960px) {
+  .CrossPlatform .column.last {
+    width: 66.7%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 961px) {
+  .CrossPlatform {
+    max-height: 800px;
+  }
+
+  /* Correct for whitespace in the image of phones */
+  .CrossPlatform .column.left {
+    margin-top: -25px;
+  }
+
+  .CrossPlatform .prism-code {
+    margin-top: -25px;
+    overflow-y: scroll;
+  }
+}
+
+/* Schemas for People */
+
+.SchemasPeople .column.last {
+  margin-bottom: -50px;
+}
+
+.SchemasPeople pre {
+  margin: 0;
+}
+
+.SchemasPeople .prism-code {
+  border-radius: 0;
+  font-size: 80%;
+  background-color: #282c34;
+}
+
+@media only screen and (max-width: 480px) {
+  .SchemasPeople .column.last {
+    width: 100%;
+    padding: 0;
+    overflow-x: hidden;
+  }
+
+  .SchemasPeople .prism-code {
+    font-size: 10px;
+    padding: 1.25rem 1.25rem;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 960px) {
+  .SchemasPeople .TwoColumns {
+    grid-gap: 2rem;
+  }
+
+  .SchemasPeople .column.last {
+    width: 100%;
+    padding: 0;
+    background-color: var(--dark);
+    height: 28rem;
+    overflow-y: scroll;
+  }
+
+  .SchemasPeople .prism-code {
+    width: 30rem;
+    margin: 0 auto;
+    padding: 1.25rem 0rem;
+  }
+}
+
+@media only screen and (min-width: 961px) {
+  .SchemasPeople .TwoColumns .column.right {
+    /* Make flush with top and bottom */
+    margin-top: -50px;
+    /* Get rid of default left padding */
+    padding-left: 0;
+  }
+
+  .SchemasPeople .column.right .prism-code {
+    /* Bleed background into the right */
+    margin-right: -9999px;
+    padding: 16px 1.5rem;
+    height: 460px;
+  }
+}
+
+/* Get Started */
+
+.GetStarted,
+.GetStarted p {
+  color: white;
+}
+
+.GetStarted .Heading {
+  color: var(--brand);
+  text-align: center;
+}
+
+.GetStarted .content {
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.GetStarted .steps {
+  align-self: center;
+}
+
+.GetStarted .steps li {
+  font-size: 28px;
+  margin-bottom: 8px;
+}
+
+.GetStarted .steps li p {
+  font-size: 17px;
+}
+
+.GetStarted .terminal {
+  display: flex;
+  flex-direction: column;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  border-top: 1px solid gray;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 30px 30px 0px 30px;
+  width: 600px;
+  position: relative;
+}
+
+.GetStarted .terminal::before {
+  content: "○ ○ ○";
+  color: gray;
+  font-size: 16px;
+  position: absolute;
+  left: 15px;
+  top: 5px;
+}
+
+.GetStarted code {
+  color: white;
+  font-size: 18px;
+  position: relative;
+  background: none;
+  border: 0;
+}
+
+.GetStarted code:first-child::before {
+  content: ">";
+  position: absolute;
+  left: -13px;
+  color: gray;
+}
+
+@media screen and (max-width: 760px) {
+  .GetStarted .content {
+    width: 80%;
+  }
+
+  .GetStarted .steps li {
+    margin-left: -1rem;
+  }
+
+  .GetStarted .terminal {
+    width: 100%;
+  }
+}
+
+/* Twitter Follow Button */
+
+.twitter-follow-button {
+  display: inline-block;
+  position: relative;
+  height: 28px;
+  box-sizing: border-box;
+  padding: 1px 10px 1px 9px;
+  background-color: #1b95e0;
+  color: #fff;
+  border-radius: 4px;
+  font-weight: 400;
+  cursor: pointer;
+  font-size: 13px;
+  line-height: 26px;
+}  
+
+.twitter-follow-button :hover {
+  color: #fff;
+  background-color: #0c7abf;
+}
+
+.twitter-follow-button .icon {
+  position: relative;
+  display: inline-block;
+  top: 4px;
+  height: 18px;
+  width: 18px;
+  margin-right: 4px;
+  background: transparent 0 0 no-repeat;
+  background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%23fff%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E);
 }
