fix: footer link hover effect is too low contrast
Signed-off-by: anablaz <ab2043@student.uni-lj.si>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -83,6 +83,12 @@
   text-decoration: underline;
 }
 
+/* mouse over link */
+.footer a:hover { 
+  color: var(--brand); 
+  text-decoration: underline;
+}
+
 /* selected link */
 .markdown a:active {
   color: #bb1122;
