--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -15,8 +15,8 @@
   stroke: #f5f6f7;
 }
 
-/* Dark mode */
+/* Light mode */
 [data-theme='light'] .featureSvg {
   fill: #1C1E21;
-  stroke: #1C1E21; /* Change color in dark mode */
+  stroke: #1C1E21; /* Change color in light mode */
 }
