--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -345,6 +345,7 @@
 @media only screen and (max-width: 960px) {
   .CrossPlatform .column.last {
     max-height: 300px;
+    overflow-y: auto ;
   }
 }
 
@@ -360,6 +361,16 @@
     max-height: 800px;
   }
 
+  .CrossPlatform .column.last {
+    max-height: 800px;
+    overflow-y: auto;
+    
+  }
+
+  .CrossPlatform .column.last::-webkit-scrollbar {
+    width: 7px;
+}
+
   /* Correct for whitespace in the image of phones */
   .CrossPlatform .column.left {
     margin-top: -25px;
@@ -367,7 +378,7 @@
 
   .CrossPlatform .prism-code {
     margin-top: -25px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
