--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -347,6 +347,10 @@
     max-height: 300px;
     overflow-y: auto ;
   }
+  .CrossPlatform .column.last::-webkit-scrollbar {
+    width: 7px;
+}
+
 }
 
 @media only screen and (min-width: 481px) and (max-width: 960px) {
@@ -354,6 +358,10 @@
     width: 66.7%;
     margin: 0 auto;
   }
+  .CrossPlatform .column.last::-webkit-scrollbar {
+    width: 7px;
+}
+
 }
 
 @media only screen and (min-width: 961px) {
