--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -71,6 +71,10 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
+[data-theme='dark'] .DocSearch {
+  --docsearch-hit-active-color: var(--text);
+}
+
 /* mouse over link */
 .markdown a {
   color: #3333FF;
